force-app/main/default/objects/Tax_Invoice_Item__c/Tax_Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>Tax Invoice Item</label>
    <nameField>
        <label>Tax Invoice Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>