force-app/main/default/objects/Tax_Invoice_Item__c/fields/GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_Rate__c</fullName>
    <label>GST Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>