force-app/main/default/objects/Tax_Invoice_Item__c/fields/HSN_Code__c.field-meta.xml
<CustomField>
    <fullName>HSN_Code__c</fullName>
    <label>HSN Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>