force-app/main/default/objects/Tax_Invoice_Item__c/fields/IGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount__c</fullName>
    <label>IGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>