force-app/main/default/objects/Tax_Invoice_Item__c/fields/SGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_Amount__c</fullName>
    <label>SGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>