force-app/main/default/objects/Tax_Invoice_Item__c/fields/Tax_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice__c</fullName>
    <label>Tax Invoice</label>
    <referenceTo>Tax_Invoice__c</referenceTo>
    <relationshipLabel>Tax Invoice Items</relationshipLabel>
    <relationshipName>Tax_Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>