force-app/main/default/objects/Tax_Invoice_Item__c/fields/Total_Item_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Value__c</fullName>
    <label>Total Item Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>